Armature Crash on Select Similar Group #74516

Closed
opened 2020-03-07 03:48:20 +01:00 by Zachary Riewald · 9 comments

Blender Version
Broken: 2.80, 2.81, 2.82, 2.83 beta / master (8b2072868d)
Worked: never (select similar group was added in 2.80)

Short description of error
Crash when trying to use select similar group in a simple armature.

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

  1. Start blender 2.82
  2. Create armature
  3. Go to Edit mode
  4. Extrude from the bone (Click to confirm)
  5. Select -> Similar -> Group

Then blender crashes.

**Blender Version** Broken: 2.80, 2.81, 2.82, 2.83 beta / master (8b2072868d50) Worked: never (select similar group was added in 2.80) **Short description of error** Crash when trying to use select similar group in a simple armature. **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). 1. Start blender 2.82 2. Create armature 3. Go to Edit mode 4. Extrude from the bone (Click to confirm) 5. Select -> Similar -> Group Then blender crashes.

Added subscriber: @zykoz

Added subscriber: @zykoz

Select -> Similar -> Shape (crashes it too)

Select -> Similar -> Shape (crashes it too)

Added subscriber: @RodDavis

Added subscriber: @RodDavis

Also happens with 2.83

Also happens with 2.83

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

pchan_active was NULL

>	blender.exe!select_similar_data_pchan(bContext * C, const unsigned __int64 bytes_size, const int offset) Řádek 1470	C

 	blender.exe!armature_select_similar_exec(bContext * C, wmOperator * op) Řádek 1594	C
 	blender.exe!WM_menu_invoke_ex(bContext * C, wmOperator * op, int opcontext) Řádek 972	C
 	blender.exe!WM_menu_invoke(bContext * C, wmOperator * op, const wmEvent * UNUSED_event) Řádek 993	C
 	blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Řádek 1267	C
 	blender.exe!wm_operator_call_internal(bContext * C, wmOperatorType * ot, PointerRNA * properties, ReportList * reports, const short context, const bool poll_only, wmEvent * event) Řádek 1481	C
 	blender.exe!WM_operator_name_call_ptr(bContext * C, wmOperatorType * ot, short context, PointerRNA * properties) Řádek 1530	C
 	blender.exe!ui_apply_but_funcs_after(bContext * C) Řádek 886	C
 	blender.exe!ui_handler_region_menu(bContext * C, const wmEvent * event, void * UNUSED_userdata) Řádek 10706	C
 	blender.exe!wm_handler_ui_call(bContext * C, wmEventHandler_UI * handler, const wmEvent * event, int always_pass) Řádek 617	C
 	blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Řádek 2560	C
 	blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Řádek 2806	C
 	blender.exe!wm_event_do_handlers(bContext * C) Řádek 3186	C
 	blender.exe!WM_main(bContext * C) Řádek 421	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Řádek 524	C
 	[Externí kód]	
`pchan_active` was `NULL` ``` > blender.exe!select_similar_data_pchan(bContext * C, const unsigned __int64 bytes_size, const int offset) Řádek 1470 C blender.exe!armature_select_similar_exec(bContext * C, wmOperator * op) Řádek 1594 C blender.exe!WM_menu_invoke_ex(bContext * C, wmOperator * op, int opcontext) Řádek 972 C blender.exe!WM_menu_invoke(bContext * C, wmOperator * op, const wmEvent * UNUSED_event) Řádek 993 C blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Řádek 1267 C blender.exe!wm_operator_call_internal(bContext * C, wmOperatorType * ot, PointerRNA * properties, ReportList * reports, const short context, const bool poll_only, wmEvent * event) Řádek 1481 C blender.exe!WM_operator_name_call_ptr(bContext * C, wmOperatorType * ot, short context, PointerRNA * properties) Řádek 1530 C blender.exe!ui_apply_but_funcs_after(bContext * C) Řádek 886 C blender.exe!ui_handler_region_menu(bContext * C, const wmEvent * event, void * UNUSED_userdata) Řádek 10706 C blender.exe!wm_handler_ui_call(bContext * C, wmEventHandler_UI * handler, const wmEvent * event, int always_pass) Řádek 617 C blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Řádek 2560 C blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Řádek 2806 C blender.exe!wm_event_do_handlers(bContext * C) Řádek 3186 C blender.exe!WM_main(bContext * C) Řádek 421 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Řádek 524 C [Externí kód] ```
Dalai Felinto changed title from Armature Crash to Armature Crash on Select Similar Group 2020-03-11 15:11:53 +01:00

This issue was referenced by b198cef89f

This issue was referenced by b198cef89fa4a173580e8745dee051f37d1927c8

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Dalai Felinto self-assigned this 2020-03-11 15:32:52 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74516
No description provided.