Fix T74516: Armature Crash on Select Similar Group

Select Similar Group and Select Similar Shape had this issue since they
were added. Basically it assumes there is pose data which in some cases
it does not.